--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="spiritlink.jpg" alt="spirit-link_log">
+        <img src="" alt="spirit-link_log">
     </header>
     
     <main>
