--- a/Index.htm/index.html
+++ b/Index.htm/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="spiritlink.jpg" alt="spirit-link_log">
+        <img src="C:\Users\TMG Labs\Desktop\Spiritlink-logo1.png" alt="spiritlink-logo1">
     </header>
     
     <main>
