--- a/Index.htm/signup.html
+++ b/Index.htm/signup.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
+
+    <div id="header" >
+
+            <img src="C:\Users\TMG Labs\Desktop\Spiritlink-logo1.png" alt="Spiritlink-logo">        
+        
+        </div>
+        <br><br>
+    
     <form action="login.html">
 
         <label for="full Name">Full Name :</label>  
@@ -19,8 +27,16 @@
 
             <label for="password">Password :</label>
             <input type="password" value="" placeholder="Enter password">
-
-            <input type="submit" value="Login">
+            <br><br>
+            <label for="password">Confirm password :</label>
+            <input type="password" value="" placeholder="Enter password">
             <br><br>
 
+            <input type="submit" value="Signup">
+            <br><br>
+
+            <p>Already have an account? <a href="login.html">Login</a></p>
+
+    </form>
+</body>
 </html>
