--- a/signup.html
+++ b/signup.html
@@ -21,9 +21,14 @@
             <input type="text" value="" placeholder="Full name">
             <br><br>
 
-            <label for="email">Email Address :</label>
+            <label for="email">Email Address/Phone number :</label>
             <input type="email" value="" placeholder="Email address">
             <br><br>
+
+            <label for="username/phonenumber">Username:</label>
+            <input type="username/phonenumber" value="" placeholder="Username">
+            <br><br>
+
 
             <label for="password">Password :</label>
             <input type="password" value="" placeholder="Enter password">
